--- a/src/Modules/CrestApps.OrchardCore.AI/CrestApps.OrchardCore.AI.csproj
+++ b/src/Modules/CrestApps.OrchardCore.AI/CrestApps.OrchardCore.AI.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="OrchardCore.ResourceManagement" />
     <PackageReference Include="OrchardCore.Navigation.Core" />
     <PackageReference Include="OrchardCore.Deployment.Abstractions" />
+    <PackageReference Include="OrchardCore.Workflows.Abstractions" />
   </ItemGroup>
 
   <ItemGroup>
