--- a/src/CrestApps.OrchardCore.Documentations/CrestApps.OrchardCore.Documentations.csproj
+++ b/src/CrestApps.OrchardCore.Documentations/CrestApps.OrchardCore.Documentations.csproj
@@ -5,6 +5,12 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <!-- Hide generated folders from Solution Explorer -->
+  <ItemGroup>
+    <None Remove=".docusaurus\**;build\**;node_modules\**" />
+    <Content Remove=".docusaurus\**;build\**;node_modules\**" />
+  </ItemGroup>
+
   <!-- Include all Docusaurus files -->
   <ItemGroup>
     <None Include="..\docs\**\*.*" Exclude="..\docs\node_modules\**;..\docs\build\**;..\docs\.docusaurus\**" Link="docs\%(RecursiveDir)%(Filename)%(Extension)" />
