--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@babel/core": "^7.22.11",
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-flow": "7.27.1",
-    "all-contributors-cli": "^6.26.1",
     "child_process": "^1.0.2",
     "es6-promise": "4.2.8",
+    "fancy-log": "^2.0.0",
     "glob": "^13.0.6",
     "graceful-fs": "4.2.11",
     "gulp": "^5.0.1",
@@ -38,7 +38,6 @@
     "gulp-terser": "2.1.0",
     "gulp-typescript": "^5.0.1",
     "merge-stream": "2.0.0",
-    "npm-run-all": "^4.1.5",
     "path-posix": "1.0.0",
     "postcss": "8.5.6",
     "postcss-rtl": "^2.0.0",
@@ -48,7 +47,20 @@
   },
   "dependencies": {
     "chart.js": "^4.5.1",
-    "extendable-media-recorder": "^9.2.36",
-    "gulp-util": "^3.0.8"
+    "extendable-media-recorder": "^9.2.36"
+  },
+  "overrides": {
+    "gulp-match": {
+      "minimatch": "^10.0.1"
+    },
+    "gulp-newer": {
+      "minimatch": "^10.0.1"
+    },
+    "gulp-typescript": {
+      "minimatch": "^10.0.1"
+    },
+    "@gulp-sourcemaps/identity-map": {
+      "postcss": "8.5.6"
+    }
   }
 }
