--- a/.github/workflows/release_ci.yml
+++ b/.github/workflows/release_ci.yml
@@ -8,6 +8,9 @@ on:
     tags: 
       - 'v*.*.*'
 
+permissions:
+  contents: read
+  packages: write
 env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
   DOTNET_CLI_TELEMETRY_OPTOUT: true
