--- a/.github/workflows/assets_validation.yml
+++ b/.github/workflows/assets_validation.yml
@@ -12,6 +12,9 @@ on:
   pull_request:
     branches: [ main, release/** ]
 
+permissions:
+  contents: read
+
 concurrency:
   group: ${{ github.head_ref || github.run_id }}-assets_validation
   cancel-in-progress: true
