--- a/.github/workflows/pr_ci.yml
+++ b/.github/workflows/pr_ci.yml
@@ -2,6 +2,8 @@ name: PR - CI
 on: 
   pull_request:
     branches: [ main, release/** ]
+permissions:
+  contents: read
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
