--- a/.github/workflows/preview_ci.yml
+++ b/.github/workflows/preview_ci.yml
@@ -4,6 +4,9 @@ on:
   schedule:
     # 4:19 AM UTC every day. A random time to avoid peak times of GitHub Actions.
     - cron: '19 4 * * *'
+permissions:
+  contents: read
+  packages: write
 env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
   DOTNET_CLI_TELEMETRY_OPTOUT: true
