--- a/.github/workflows/validate_prompts.yml
+++ b/.github/workflows/validate_prompts.yml
@@ -4,6 +4,8 @@ on:
     branches: [ main, release/** ]
     paths:
       - '**/AITemplates/Prompts/**/*.md'
+permissions:
+  contents: read
 concurrency:
   group: validate-prompts-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
