--- a/src/Modules/CrestApps.OrchardCore.Resources/package.json
+++ b/src/Modules/CrestApps.OrchardCore.Resources/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "devDependencies": {
     "@fortawesome/fontawesome-free": "6.7.2",
+    "dompurify": "^3.3.1",
     "easymde": "2.18.0",
     "flatpickr": "4.6.13",
     "highlight.js": "^11.11.1",
